--- a/_data/pubs/2003.yml
+++ b/_data/pubs/2003.yml
@@ -2,7 +2,7 @@
   link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2003_1.pdf
     display: "Project Page"
     url: /publications/2003/Krishna_Moving-Safely
-  title: Moving Safely but not Slowly - Reactively Sdapting Paths for Better Trajectory
+  title: Moving Safely but not Slowly - Reactively Adapting Paths for Better Trajectory
     Times
   venue: ICAR 2003
 
