--- a/_data/pubs/2023.yml
+++ b/_data/pubs/2023.yml
@@ -1,7 +1,7 @@
 - title: "Disentangling Planning and Control for Non-prehensile Tabletop Manipulation"
-  authors:  Vishal Reddy Mandadi, Kallol Saha, Dipanwita Guhathakurta, Nomaan Qureshi, Aditya Agarwal, Bipasha Sen, Dipanjan Das, Brojeshwar Bhowmick, Arun Singh, and Madhava Krishna
+  authors:  Vishal Reddy Mandadi, Kallol Saha, Dipanwita Guhathakurta, M. Nomaan Qureshi, Aditya Agarwal, Bipasha Sen, Dipanjan Das, Brojeshwar Bhowmick, Arun Singh, and Madhava Krishna
   venue: CASE 2023
-  link: # https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10260462
+  link: # https://ieeexplore.ieee.org/document/10260462
     url: /publications/2023/Vishal_Disentangling-Planning
     display: Project Page
   id: mkrishna
