--- a/_data/pubs/2009.yml
+++ b/_data/pubs/2009.yml
@@ -43,7 +43,7 @@
   title: Estimating Ground and Other Planes from a Single Tilted Laser Range Finder
     for On-Road Driving
   venue: ICAR 2009
-- authors: D V Karthikeya Viswanath and K Madhava Krishna
+- authors: D. V. Karthikeya Viswanath and K Madhava Krishna
   link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2009_3.pdf
     display: "Project Page"
     url: /publications/2009/Viswanath_Towards-load-balanced
