checked and corrected errors from 2023, 2022, 2018, 2017 ,2015, 2002 papers added

--- a/_data/pubs/2002.yml
+++ b/_data/pubs/2002.yml
@@ -1,5 +1,5 @@
 - authors: R Alami, T Simeon and K Madhava Krishna
-  link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2002_1.pdf
+  link: #https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=1041626
     display: "Project Page"
     url: /publications/2002/Alami_On-the-influence-of-sensor-capacities
   title: On the influence of sensor capacities and environment dynamics onto collision-free
