--- a/_data/pubs/2005.yml
+++ b/_data/pubs/2005.yml
@@ -12,7 +12,7 @@
     systems
   venue: IICAI 2005
 - authors: K Madhava Krishna and Prem K Kalra
-  link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2005_2.pdf
+  link: #https://robotics.iiit.ac.in/uploads/Main/Publications/360.pdf
     display: "Project Page"
     url: /publications/2005/Krishna_Fuzzy-Clustering
   title: Fuzzy clustering with M-Estimators
