--- a/_data/pubs/2017.yml
+++ b/_data/pubs/2017.yml
@@ -106,7 +106,7 @@
   title: Exploring Convolutional Networks for End-to-End Visual Servoing
   venue: ICRA 2017
 - authors: J. Krishna Murthy, G.V. Sai Krishna, Falak Chhaya and K. Madhava Krishna
-  link: #http://robotics.iiit.ac.in/uploads/Main/Publications/Krishna_etal_ICRA17.pdf
+  link: #https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7989089
     display: "Project Page"
     url: /publications/2017/Murthy_Reconstructing-Vehicles
   title: 'Reconstructing Vechicles from a Single Image: Shape Priors for Road Scene
