--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 28- Oct 2023
+  headline: "Workshop on Systems and Intelligence for UAV on 3rd & 4th Nov"
+
 - date: 22- Sep 2023
   headline: "HyP-NeRF: Learning Improved NeRF Priors using a HyperNetwork accepted at NeurIPS 2023"
 
