--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 02- Dec 2023
+  headline: "Short Talk by Dr. Samarth Brahmbhatt on title Robot Policy Learning for Manipulation and Navigation on 5th Dec"
+
 - date: 28- Oct 2023
   headline: "Workshop on Systems and Intelligence for UAV on 3rd & 4th Nov"
 
