--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 28- Dec 2023
+  headline: "Successfully granted Indian patent for Multi-Output Differential System for rotating three outputs at different speeds depending on load conditions, developed by Prof. Abhishek Sarkar, Prof. Madhava Krishna, and Rama Vadapalli"
+
 - date: 02- Dec 2023
   headline: "Short Talk by Dr. Samarth Brahmbhatt on title Robot Policy Learning for Manipulation and Navigation on 5th Dec"
 
