--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 01- Feb 2024
+  headline: "Six papers have been accepted for presentation at the 2024 IEEE International Conference on Robotics and Automation (ICRA), May 13-17, 2024, Yokohama, Japan"
+
 - date: 28- Dec 2023
   headline: "Successfully granted Indian patent for Multi-Output Differential System for rotating three outputs at different speeds depending on load conditions, developed by Prof. Abhishek Sarkar, Prof. Madhava Krishna, and Rama Vadapalli"
 
