--- a/_data/pubs/2024.yml
+++ b/_data/pubs/2024.yml
@@ -1,7 +1,7 @@
 - title: "AnyLoc: Towards Universal Visual Place Recognition"
   authors:  Nikhil Keetha, Avneesh Mishra, Jay Karhade, Krishna Murthy Jatavallabhula, Sebastian Scherer, Madhava Krishna, Sourav Garg
   venue: ICRA 2024
-  link: # https://ieeexplore.ieee.org/document/10260462
+  link: # https://arxiv.org/pdf/2308.00688.pdf
     url: /publications/2024/Nikhil_AnyLoc
     display: Project Page
   id: mkrishna
