--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 09- Mar 2024
+  headline: "Master Trainer Program (MTP) for Technology Specific Work Theme “Allied UAS Technologies” -11th - 15th March 2024 at IIITH Campus"
+
 - date: 01- Feb 2024
   headline: "Six papers have been accepted for presentation at the 2024 IEEE International Conference on Robotics and Automation (ICRA), May 13-17, 2024, Yokohama, Japan"
 
