--- a/_data/pubs/2024.yml
+++ b/_data/pubs/2024.yml
@@ -1,3 +1,12 @@
+- title: "EDMP: Ensemble-of-costs-guided Diffusion for Motion Planning"
+  authors: Kallol Saha, Vishal Mandadi, Jayaram Reddy, Ajit Srikanth, Aditya Agarwal, Bipasha Sen, Arun Singh and Madhava Krishna
+  venue: ICRA 2024
+  link: # https://arxiv.org/pdf/2309.11414.pdf
+    url: /publications/2024/Kallol_EDMP
+    display: Project Page
+  id: mkrishna
+  featured: 1
+
 - title: "FinderNet: A Data Augmentation Free Canonicalization aided Loop Detection and Closure technique for Point clouds in 6-DOF separation"
   authors: Sudarshan S, Harithas Gurkirat, Singh Aneesh Chavan, Sarthak Sharma, Suraj Patni, Chetan Arora, Madhava Krishna
   venue: ICRA 2024
