new paper added

--- a/_data/pubs/2024.yml
+++ b/_data/pubs/2024.yml
@@ -1,3 +1,12 @@
+- title: "LIP-Loc: LiDAR Image Pretraining for Cross-Modal Localization"
+  authors: Sai Shubodh, Mohammad Omama, Husain Zaidi, Udit Singh Parihar, K Madhava Krishna
+  venue: WACV 2024
+  link: # https://arxiv.org/pdf/2312.16648
+    url: /publications/2024/Sai_LIP-Loc:LiDAR
+    display: Project Page
+  id: mkrishna
+  featured: 1
+
 - title: "EDMP: Ensemble-of-costs-guided Diffusion for Motion Planning"
   authors: Kallol Saha, Vishal Mandadi, Jayaram Reddy, Ajit Srikanth, Aditya Agarwal, Bipasha Sen, Arun Singh and Madhava Krishna
   venue: ICRA 2024
