--- a/_data/pubs/2024.yml
+++ b/_data/pubs/2024.yml
@@ -2,7 +2,7 @@
   authors: Sai Shubodh, Mohammad Omama, Husain Zaidi, Udit Singh Parihar, K Madhava Krishna
   venue: WACV 2024
   link: # https://arxiv.org/pdf/2312.16648
-    url: /publications/2024/Sai_LIP-Loc:LiDAR
+    url: /publications/2024/Sai_LIP-Loc-LiDAR
     display: Project Page
   id: mkrishna
   featured: 1
