--- a/_data/pubs/2024.yml
+++ b/_data/pubs/2024.yml
@@ -1,8 +1,35 @@
+- title: "Talk2BEV: Language-enhanced Bird’s-eye View Maps for Autonomous Driving"
+  authors:  Vikrant Dewangan, Tushar Choudhary, Shivam Chandhok, Shubham Priyadarshan, Anushka Jain, Arun K. Singh, Siddharth Srivastava, Krishna Murthy Jatavallabhula, K. Madhava Krishna
+  venue: ICRA 2024
+  link: # https://arxiv.org/pdf/2310.02251
+    url: /publications/2024/Vikrant_Talk2BEV
+    display: Project Page
+  id: mkrishna
+  featured: 1
+
+- title: "ATPPNet: Attention based Temporal Point cloud Prediction Network"
+  authors: Kaustab Pal, Aditya Sharma, Avinash Sharma, K. Madhava Krishna
+  venue: ICRA 2024
+  link: # https://arxiv.org/pdf/2401.17399
+    url: /publications/2024/Kaustab_ATPPNet
+    display: Project Page
+  id: mkrishna
+  featured: 1
+
+- title: "Anticipate & Collab: Data-driven Task Anticipation and Knowledge-driven Planning for Human-robot Collaboration"
+  authors: Shivam Singh, Karthik Swaminathan, Raghav Arora, Ramandeep Singh, Ahana Datta, Dipanjan Das, Snehasis Banerjee, Mohan Sridharan, Madhava Krishna
+  venue: ICRA 2024
+  link: # https://arxiv.org/pdf/2404.03587
+    url: /publications/2024/Shivam_Anticipate
+    display: Project Page
+  id: mkrishna
+  featured: 1
+
 - title: "LIP-Loc: LiDAR Image Pretraining for Cross-Modal Localization"
   authors: Sai Shubodh, Mohammad Omama, Husain Zaidi, Udit Singh Parihar, K Madhava Krishna
   venue: WACV 2024
   link: # https://arxiv.org/pdf/2312.16648
-    url: /publications/2024/Sai_LIP-Loc:LiDAR
+    url: /publications/2024/Sai_LIP-Loc-LiDAR
     display: Project Page
   id: mkrishna
   featured: 1
