--- a/_data/pubs/2022.yml
+++ b/_data/pubs/2022.yml
@@ -1,8 +1,8 @@
-- title: "Object Goal Navigation using Data Regularized Q-Learning"
-  authors: Nandiraju Gireesh, D. A. Sasi Kiran, Snehasis Banerjee, Mohan Sridharan, Brojeshwar Bhowmick, Madhava Krishna
-  venue:  International Conference on Automation Science and Engineering (CASE), 2022
-  link: # https://arxiv.org/pdf/2208.13009.pdf
-    url: /publications/2022/Nandiraju_Object-Goal
+- title: "Multi-Modal Model Predictive Control Batch Non-Holonomic Trajectory Optimization: Application to Highway Driving"
+  authors: Vivek K. Adajania, Aditya Sharma, Anish Gupta, Houman Masnavi, K. Madhava Krishna and Arun K. Singh
+  venue:  RAL & ICRA, 2022
+  link: # https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9705556
+    url: /publications/2022/Vivek_Multi-Modal
     display: Project Page
   id: mkrishna
   featured: 1
