new publications added

--- a/_data/pubs/2022.yml
+++ b/_data/pubs/2022.yml
@@ -1,6 +1,6 @@
 - title: "Object Goal Navigation using Data Regularized Q-Learning"
   authors: Nandiraju Gireesh, D. A. Sasi Kiran, Snehasis Banerjee, Mohan Sridharan, Brojeshwar Bhowmick,Madhava Krishna
-  venue:  CASE, 2022
+  venue: International Conference on Automation Science and Engineering (CASE), 2022
   link: # https://arxiv.org/pdf/2208.13009
     url: /publications/2022/Nandiraju_Object-Goal
     display: Project Page
