--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 19- Jul 2024
+  headline: "6 papers are accepted for presentation at the 2024 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) which will be held in October 14-18, 2024 at ADNEC in Abu Dhabi ,UAE"
+
 - date: 09- Mar 2024
   headline: "Master Trainer Program (MTP) for Technology Specific Work Theme “Allied UAS Technologies” -11th - 15th March 2024 at IIITH Campus"
 
