--- a/_data/pubs/2024.yml
+++ b/_data/pubs/2024.yml
@@ -1,3 +1,30 @@
+- title: "QueSTMaps: Queryable Semantic Topological Maps for 3D Scene Understanding"
+  authors: Yash Mehan, Kumaraditya Gupta, Rohit Jayanti, Anirudh Govil, Sourav Garg, and Madhava Krishna
+  venue:  IROS 2024
+  link: # https://arxiv.org/pdf/2404.06442
+    url: /publications/2024/Yash_QueSTMaps
+    display: Project Page
+  id: mkrishna
+  featured: 1
+
+- title: "DiffPrompter: Differentiable Implicit Visual Prompts for Semantic-Segmentation in Adverse Conditions"
+  authors: Sanket Kalwar, Mihir Ungarala, Shruti Jain, Aaron Monis, Krishna Reddy Konda, Sourav Garg, K Madhava Krishna
+  venue:  IROS 2024
+  link: # https://arxiv.org/pdf/2310.04181
+    url: /publications/2024/Sanket_DiffPrompter
+    display: Project Page
+  id: mkrishna
+  featured: 1
+
+- title: "Imagine2Servo: Intelligent Visual Servoing with Diffusion-Driven Goal Generation for Robotic Tasks"
+  authors: Pranjali Pathre, Gunjan Gupta, M. Nomaan Qureshi, Mandyam Brunda, Samarth Brahmbhatt, K. Madhava Krishna
+  venue:  IROS 2024
+  link: # https://brunda02.github.io/RRC/
+    url: /publications/2024/Pranjali_Imagine
+    display: Project Page
+  id: mkrishna
+  featured: 1
+
 - title: "Bi-level Trajectory Optimization on Uneven Terrains with Differentiable Wheel-Terrain Interaction Model"
   authors: Amith Manoharan, Aditya Sharma, Himani Belsare, Kaustab Pal, K. Madhava Krishna, Arun Kumar Singh
   venue:  IROS 2024
