errors corrected and added

--- a/_data/pubs/2024.yml
+++ b/_data/pubs/2024.yml
@@ -100,8 +100,8 @@
 - title: "Introducing Switched Adaptive Control for Self-Reconfigurable Mobile Cleaning Robots"
   authors: Madan Mohan Rayguru, Spandan Roy, Lim Yi, Mohan Rajesh Elara and Simone Baldi
   venue: IEEE TRANSACTIONS ON AUTOMATION SCIENCE AND ENGINEERING
-  link: # https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10082944
-    url: /publications/2024/Bhaskar_Sim-to-RealMadan_Introducing-Switched
+  link: # https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10082944&tag=1
+    url: /publications/2024/Madan_Introducing-Switched
     display: Project Page
   id: mkrishna
   featured: 1
