--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 28- Oct 2024
+  headline: "Second Two-Day workshop on Systems and Intelligence for UAV will be held on 15th & 16th Nov,2024 at KRB Auditorium, IIITH."
+
 - date: 19- Jul 2024
   headline: "6 papers are accepted for presentation at the 2024 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) which will be held in October 14-18, 2024 at ADNEC in Abu Dhabi ,UAE"
 
