--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 25- Nov 2024
+  headline: "Informal and Interactive Talk on Integrating Optimization Solvers with Deep Learning Architectures to facilitate Differentiable Planning, Optimization by Dr Arun Kumar Singh held on 18th Nov 2024 at Himalaya 204"
+
 - date: 05- Nov 2024
   headline: "Second Two-Day workshop on Systems and Intelligence for UAV will be held in the first or second week of Dec, dates will be announced shortly."
 
