--- a/_data/news.yml
+++ b/_data/news.yml
@@ -2,7 +2,7 @@
   headline: "Informal and Interactive Talk on Integrating Optimization Solvers with Deep Learning Architectures to facilitate Differentiable Planning, Optimization by Dr Arun Kumar Singh held on 18th Nov 2024 at Himalaya 204"
 
 - date: 05- Nov 2024
-  headline: "Second Two-Day workshop on Systems and Intelligence for UAV will be held in the first or second week of Dec, dates will be announced shortly."
+  headline: "Second Two-Day workshop on Systems and Intelligence for UAV will be held on 18th & 19th Dec."
 
 - date: 19- Jul 2024
   headline: "6 papers are accepted for presentation at the 2024 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) which will be held in October 14-18, 2024 at ADNEC in Abu Dhabi ,UAE"
