--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 16- Jan 2025
+  headline: "Interactive Talk on Advanced Robotics for Space Exploration" by Dr Shreya Santra at KRB Auditorium, 16th Jan 2025"
+
 - date: 25- Nov 2024
   headline: "Informal and Interactive Talk on Integrating Optimization Solvers with Deep Learning Architectures to facilitate Differentiable Planning, Optimization by Dr Arun Kumar Singh held on 18th Nov 2024 at Himalaya 204"
 
