--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,8 +1,12 @@
+
 - date: 18- Feb 2025
   headline: "Talk by Prof Seshadri Mohan, Professor Emeritus, School of Engineering and Engineering Technology, UA Little Rock at IIITH Campus"
 
 - date: 18- Feb 2025
   headline: "Master Trainer Program (MTP) for Technology Specific Work Theme “Allied UAS Technologies” with focus on Learning, Vision and Planning -3rd - 7th March 2025 at Saranga Hall 119, IIITH Campus"
+
+- date: 26- Jan 2025
+  headline: "Three papers have been accepted for presentation at the 2025 IEEE International Conference on Robotics and Automation (ICRA), May 19–23, Atlanta, USA"
 
 - date: 16- Jan 2025
   headline: "Interactive Talk on Advanced Robotics for Space Exploration by Dr Shreya Santra at KRB Auditorium, 16th Jan 2025"
