Corrected gallery pics

--- a/_data/pics_ieee_ras_president_visit.yml
+++ b/_data/pics_ieee_ras_president_visit.yml
@@ -1,8 +1,8 @@
-- title: 1
+- title: a
   image: 1.jpeg
-- title: 2
+- title: b
   image: 2.jpeg
-- title: 3
+- title: c
   image: 3.jpeg
-- title: 4
+- title: d
   image: 4.jpeg
