--- a/_data/pubs/2025.yml
+++ b/_data/pubs/2025.yml
@@ -1,3 +1,21 @@
+- title: "A task and motion planning framework using iteratively deepened AND/OR graph networks"
+  authors:  Hossein Karami, Antony Thomas, Fulvio Mastrogiovanni
+  venue: Robotics and Autonomous Systems Journal
+  link: # https://www.sciencedirect.com/science/article/pii/S0921889025000296
+    url: /publications/2025/Hossein_A-task
+    display: Project Page
+  id: mkrishna
+  featured: 1
+
+- title: "Engineering End-to-End Remote Labs Using IoT-Based Retrofitting"
+  authors:  SAVITHA VISWANADH KANDALA , AKSHIT GUREJA , NAGESH WALCHATWAR, RISHABH AGRAWAL, SHIVEN SINHA , SACHIN CHAUDHARI , KARTHIK VAIDHYANATHAN, VENKATESH CHOPPELLA, PRABHAKAR BHIMALAPURAM,HARIKUMAR KANDATH AND AFTAB HUSSAIN
+  venue: IEEE Access
+  link: # https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=10816426
+    url: /publications/2025/Savitha_Engineering
+    display: Project Page
+  id: mkrishna
+  featured: 1
+
 - title: "DA-VIL: Adaptive Dual-Arm Manipulation with Reinforcement Learning and Variable Impedance Control"
   authors:  Md Faizal Karim, Shreya Bollimuntha, Mohammed Saad Hashmi, Autrio Das, Gaurav Singh, Srinath Sridhar, Arun Kumar Singh, Nagamanikandan Govindan, K Madhava Krishna
   venue: ICRA 2025
