--- a/_data/pubs/2025.yml
+++ b/_data/pubs/2025.yml
@@ -1,3 +1,12 @@
+- title: "magine-2-Drive: Leveraging High-Fidelity World Models via Multi-Modal Diffusion Policies"
+  authors:  Anant Garg, K Madhava Krishna
+  venue: 2025 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)
+  link: # https://arxiv.org/pdf/2411.10171
+    url: /publications/2025/Anant_Imagine
+    display: Project Page
+  id: mkrishna
+  featured: 1
+
 - title: "Sensor Based Active Fault Tolerant Controller for Hexacopters"
   authors:  Munjaal Bhatt, Aakash Maniar, Aditya Mulgundkar, Deepak Gangadharan†, Harikumar Kandath
   venue: 2025 11th International Conference on Automation, Robotics, and Applications
