--- a/_data/pubs/2025.yml
+++ b/_data/pubs/2025.yml
@@ -1,4 +1,4 @@
-- title: "magine-2-Drive: Leveraging High-Fidelity World Models via Multi-Modal Diffusion Policies"
+- title: "Imagine-2-Drive: Leveraging High-Fidelity World Models via Multi-Modal Diffusion Policies"
   authors:  Anant Garg, K Madhava Krishna
   venue: 2025 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)
   link: # https://arxiv.org/pdf/2411.10171
