--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- date: 16- jun 2025
+  headline: "Four papers have been accepted for the presentation at the 2025 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), Oct 19-25, Hangzhou, China"
 
 - date: 18- Feb 2025
   headline: "Talk by Prof Seshadri Mohan, Professor Emeritus, School of Engineering and Engineering Technology, UA Little Rock at IIITH Campus"
