--- a/_data/pubs/2025.yml
+++ b/_data/pubs/2025.yml
@@ -1,3 +1,12 @@
+- title: "DG16M: A Large-Scale Dataset for Dual-Arm Grasping with Force-Optimized Grasps"
+  authors: Md Faizal Karim, Mohammed Saad Hashmi1, Shreya Bollimuntha, Mahesh Reddy Tapeti, Gaurav Singh,Nagamanikandan Govindan, K Madhava Krishna
+  venue: 2025 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)
+  link: # https://arxiv.org/pdf/2503.08358
+    url: /publications/2025/Md_DG16M
+    display: Project Page
+  id: mkrishna
+  featured: 1
+
 - title: "Imagine-2-Drive: Leveraging High-Fidelity World Models via Multi-Modal Diffusion Policies"
   authors:  Anant Garg, K Madhava Krishna
   venue: 2025 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)
